# libcsuit

./: .dockerignore  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_ossl3  Dockerfile_psa  Doxyfile  Makefile  Makefile.encode  Makefile.encrypt  Makefile.parser  Makefile.process  Makefile.tamproto  Makefile.teep  PROCESS.md  README.md  README_process.md  enc.Dockerfile  generate_teep_example.sh  mbedtls_config.h  ossl.Dockerfile  ossl3.Dockerfile  psa.Dockerfile  tamproto.Dockerfile
examples/: suit_examples_common.c  suit_examples_cose.c  suit_manifest_encode_main.c  suit_manifest_encode_main_psa.c  suit_manifest_encrypt_main.c  suit_manifest_for_teep_delete.c  suit_manifest_for_teep_depend_uri.c  suit_manifest_for_teep_encode.c  suit_manifest_for_teep_encode_depend.c  suit_manifest_for_teep_integrated.c  suit_manifest_for_teep_integrated_depend.c  suit_manifest_for_teep_uri.c  suit_manifest_parser_for_tamproto.c  suit_manifest_parser_main.c  suit_manifest_parser_main_psa.c  suit_manifest_process_main.c
examples/inc/: suit_examples_common.h  trust_anchor_hmac256.h  trust_anchor_prime256v1.h  trust_anchor_prime256v1_pub.h
inc/: csuit.h  suit_common.h  suit_cose.h  suit_digest.h  suit_manifest_data.h  suit_manifest_print.h  suit_manifest_process.h
inc/csuit/: csuit.h  suit_common.h  suit_cose.h  suit_digest.h  suit_manifest_data.h  suit_manifest_print.h  suit_manifest_process.h
src/: suit_common.c  suit_cose.c  suit_digest.c  suit_manifest_data.c  suit_manifest_decode.c  suit_manifest_encode.c  suit_manifest_print.c  suit_manifest_process.c
test/: .gitignore  Makefile  main.c
testfiles/: .gitignore  config.json  suit_manifest_exp0.cbor  suit_manifest_exp0.md  suit_manifest_exp0_auth.cbor  suit_manifest_exp1.cbor  suit_manifest_exp1.md  suit_manifest_exp2.cbor  suit_manifest_exp2.md  suit_manifest_exp2A.cbor  suit_manifest_exp2B.cbor  suit_manifest_exp3.cbor  suit_manifest_exp3.md  suit_manifest_exp4.cbor  suit_manifest_exp4.md  suit_manifest_exp5.cbor  suit_manifest_exp5.md  suit_manifest_expD.cbor  suit_manifest_expD.md  suit_manifest_expD_0.cbor  suit_manifest_expD_1.cbor  suit_manifest_expE.cbor  suit_manifest_expE.md  suit_manifest_expI.cbor  suit_manifest_expI.md  suit_manifest_expID.cbor  suit_manifest_expID.md  suit_manifest_expR.cbor  suit_manifest_expR.md  suit_manifest_expR_fixed.cbor  suit_manifest_expU.cbor  suit_manifest_expU.md  suit_manifest_expU_fixed.cbor
testfiles/key/: trust_anchor_secp256r1.der  trust_anchor_secp256r1.pem  trust_anchor_secp256r1_pub.der  trust_anchor_secp256r1_pub.pem
